Fix code wrap

--- a/blocks/code/code.css
+++ b/blocks/code/code.css
@@ -61,6 +61,7 @@
       font-size: 14px;
       text-transform: uppercase;
       background: light-dark(var(--s2-gray-400), var(--s2-gray-800));
+      z-index: 10;
 
       &.is-copied {
         background: light-dark(var(--s2-green-600), var(--s2-green-900));
@@ -82,6 +83,11 @@
   code[class*="language-"],
   pre[class*="language-"] {
     font-size: 16px;
+  }
+
+  &.wrap pre[class*="language-"] > code[class*="language-"] {
+    white-space: pre-wrap;
+    word-break: break-word;
   }
 }
 
