--- a/blocks/page-list/page-list.css
+++ b/blocks/page-list/page-list.css
@@ -11,14 +11,14 @@
   }
 
   a {
-    color: light-dark(var(--dark-color), var(--light-color));
+    color: var(--s2-gray-700);
     text-decoration: none;
   }
 
   .docket-page-list-card {
     display: grid;
     border-radius: 16px;
-    background-color: light-dark(var(--s2-gray-50), var(--s2-gray-800));
+    background-color: var(--s2-gray-100);
     margin: 0;
     transition: background-color 0.25s ease-in-out;
     overflow: hidden;
@@ -28,7 +28,7 @@
     }
 
     &:hover {
-      background-color: light-dark(var(--s2-gray-100), var(--s2-gray-700));
+      background-color: var(--s2-gray-200);
 
       img {
         filter: brightness(1.1);
